--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -56,8 +56,17 @@
 
             <div class="tab-pane" id="tab2">
                 <div class='row-fluid' id='productionInputs'>
-                    <div ng-repeat='input in recipes[productionRecipeName].inputs' class='span{{inputSpanType()}}'>
-                        <div cylinder type='input' label='{{getInputName(input, productionRecipeName)}}' proportion='{{input.pct}}' having='{{input.productOnHand}}' critical='{{input.productCritical}}' accuracy="{{input.accuracy}}" rounding="{{input.rounding}}" uom="{{input.UOM}}"></div>
+                    <div class='span12 production-items-container'>
+                        <div class='row-fluid'>
+                            <div ng-repeat='input in recipes[productionRecipeName].inputs' class='span{{inputSpanType()}}'>
+                                <div cylinder type='input' label='{{getInputName(input, productionRecipeName)}}' proportion='{{input.pct}}' having='{{input.productOnHand}}' critical='{{input.productCritical}}' accuracy="{{input.accuracy}}" rounding="{{input.rounding}}" uom="{{input.UOM}}"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row-fluid'>
+                    <div class='span12'>
                         <div class='arrow-input'></div>
                     </div>
                 </div>
@@ -72,9 +81,18 @@
                 </div>
 
                 <div class='row-fluid'>
-                    <div ng-repeat='output in recipes[productionRecipeName].outputs' class='span{{outputSpanType()}}'>
+                    <div class='span12'>
                         <div class='arrow-output'></div>
-                        <div cylinder type='output' label='{{getOutputName(output, productionRecipeName)}}' proportion='{{output.pct}}' accuracy="{{output.accuracy}}" rounding="{{output.rounding}}" uom="{{output.UOM}}"></div>
+                    </div>
+                </div>
+
+                <div class='row-fluid'>
+                    <div class='span12 production-items-container'>
+                        <div class='row-fluid'>
+                            <div ng-repeat='output in recipes[productionRecipeName].outputs' class='span{{outputSpanType()}}'>
+                                <div cylinder type='output' label='{{getOutputName(output, productionRecipeName)}}' proportion='{{output.pct}}' accuracy="{{output.accuracy}}" rounding="{{output.rounding}}" uom="{{output.UOM}}"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
